--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: F9O1OvO
 SEOTitle: F9O1's blog
 header-img: img/post-bg-desk.jpg
-email: klovien@gmail.com
+email: 572399678@qq.com
 description: "失败总是贯彻始终"
 keyword: "无"
 url: "https://klovien.github.io"          # your host, for absolute URL
