--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: F9O1OvO
 SEOTitle: F9O1's blog
-header-img: img/post-bg-desk.jpg
+header-img: img-post/微信图片_20241231170717.jpg
 email: 572399678@qq.com
 description: "失败总是贯彻始终"
 keyword: "无"
