--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img-post/微信图片_20241231170717.jpg
 email: 572399678@qq.com
 description: "失败总是贯彻始终"
 keyword: "无"
-url: "https://klovien.github.io"          # your host, for absolute URL
+url: "https://github.com/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/klovien/klovien.github.io.git" # you code repository
 
