--- a/_config.yml
+++ b/_config.yml
@@ -60,14 +60,14 @@ kramdown:
 # disqus_username: qiubaiying
 
 # Gitalk
-gitalk:
-  enable: true    #是否开启Gitalk评论
-  clientID: d18b343dd9c7ca49518a                            #生成的clientID
-  clientSecret: 539e88b8a7feffaddbb553b9c421dfefcbc6eced    #生成的clientSecret
-  repo: klovien.github.io    #仓库名称
-  owner: F9O1    #github用户名
-  admin: F9O1
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+# gitalk:
+#   enable: true    #是否开启Gitalk评论
+#   clientID: d18b343dd9c7ca49518a                            #生成的clientID
+#   clientSecret: 539e88b8a7feffaddbb553b9c421dfefcbc6eced    #生成的clientSecret
+#   repo: klovien.github.io    #仓库名称
+#   owner: F9O1    #github用户名
+#   admin: F9O1
+#   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
